# polymer-analysis-software

./: LICENSE  LICENSE.txt  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg
chem_analysis/: README.md  __init__.py  config.py
chem_analysis/analysis/: __init__.py  integrate.py  peak.py  peak_IR.py  peak_SEC.py
chem_analysis/base_obj/: __init__.py  calibration.py  chromatogram.py  signal_.py  signal_array.py
chem_analysis/ir/: __init__.py  ir_array.py  ir_peak.py  ir_signal.py
chem_analysis/nmr/: __init__.py  nmr_array.py  nmr_signal.py  parameters.py  parse_bruker.py  parse_spinsolve.py
chem_analysis/plotting/: SEC_plotly.py  __init__.py  config.py  plot_format.py  plotly_helpers.py  plotting.py  plotting_plotly.py  qt_array.py  qt_helpers.py
chem_analysis/processing/: __init__.py  base.py  fourier_transform.py  phase_correction.py  re_sampling.py  translations.py
chem_analysis/sec/: __init__.py  sec_array.py  sec_calibration.py  sec_chromatogram.py  sec_math_functions.py  sec_signal.py
chem_analysis/utils/: __init__.py  code_for_subclassing.py  feather_format.py  file_count.py  load_csv.py  load_data.py  math.py  printing_tables.py  validation.py
dev/: fitting_nmr.py  ir_array.py  mca_example.py  nmr_open.py  nmr_stuff.py  process_bruker.py  stuff3.py
dev/data/: ir.feather  ir_timeseries.feather
dev/data_workups/: DW2-5-1.py  DW2-7-data-clean.py  DW2_10_IR.py  DW2_10_NMR.py  DW2_10_SEC.py  DW2_10_cuts.py  DW2_14_IR.py  DW2_14_NMR.py  DW2_14_SEC.py  (+21 more)
tests/: README.md  test_base.py  test_ir.py  test_mca.py  test_nmr.py  test_sec.py
(+40 files in other folders)
