[metadata]
name = chem_analysis
version = 0.0.3
description = Analyzing chemistry data
long_description = file: README.md
long_description_content_type = text/markdown
author = Dylan Walsh
url = https://github.com/dylanwal/chem_analysis
license = BSD
license_file = LICENSE.txt
platforms = any
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Chemistry
    Topic :: Scientific/Engineering :: Physics
    Topic :: Scientific/Engineering :: Biology
    Topic :: Scientific/Engineering :: Information Analysis
keywords =
    materials characterization
    materials science
    baseline
    background
    baseline correction
    baseline subtraction
    chemistry
    spectroscopy
    NMR
    IR
    UV-VIS

[options]
packages = find:
python_requires = >=3.10
zip_safe = no
include_package_data = true
install_requires =
    numpy>=1.22.1
    plotly>=5.5.0
    dash>=2.1.0
    scipy>=1.7.3
    pandas>=1.4.1
    pyarrow>=13.0.0


[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9

[options.package_data]
chem_analysis = py.typed

[flake8]
max-line-length = 160